# ontobdc-core

./: .gitignore  README.md  message_box.sh  ontobdc.sh  pyproject.toml  reinstall.sh  sync_core.sh
.github/workflows/: pypi-publish.yml
check/infra/: 01_structure.sh  02_git.sh  04_venv.sh  05_python_reqs.sh  06_config.sh  requirements.txt
check/infra/06_config/: infobim.yaml  ontobdc.yaml
core/src/adapter/: __init__.py
core/src/domain/port/: repository.py
core/src/domain/schema/: entity.py  factory.py
dev/: branch.sh  help.sh  install.sh
docs/spec/: SPEC007-terminal_wireframe_canvas.md  SPEC008-system_check_runner.md
docs/workbench/chatgpt/: architecture_specification.md  source.md
examples/: ontobdc_example.ipynb
resource/plugin/capability/: list_documents.py  list_documents_by_bbox.py  list_documents_by_name_pattern.py  list_documents_by_template.py  list_documents_by_type.py
resource/src/domain/: exception.py
resource/src/domain/port/: repository.py
run/: help.sh  run.py
src/ontobdc/: @@ontobdc.sh  ontobdc.sh
src/ontobdc/a3/: __init__.py
src/ontobdc/a3/adapter/: etl.py  guardrail.py  machine.py  repository.py  resource.py  response.py  worker.py
src/ontobdc/a3/domain/: __init__.py
src/ontobdc/a3/domain/machine/: lifecycle.py  response.py  standard_a3_extraction.yaml
src/ontobdc/a3/domain/port/: document.py  guardrail.py  machine.py
src/ontobdc/a3/plugin/: __init__.py
src/ontobdc/a3/plugin/capability/: transformation_to_dispatched.py  transformation_to_federated.py  transformation_to_parsed.py  transformation_to_reasoned.py  transformation_to_sanitized.py  transformation_to_translated.py  transformation_to_typed.py  transformation_to_validated.py
src/ontobdc/a3/plugin/command/: base.py  enable.py  etl.py
src/ontobdc/check/: check.sh  config.json
src/ontobdc/check/adapter/: run.py
src/ontobdc/check/infra/: 03_python.sh
src/ontobdc/check/infra/install_python_dependencies/: init.sh
src/ontobdc/check/infra/is_colab/: init.sh
src/ontobdc/cli/: __init__.py  ansii.py  check.sh  extra.py  init.py  message_box.sh  print_log.sh  setup.sh
src/ontobdc/cli/adapter/: canvas.py  color.sh  command.py  print_log.sh  terminal.py  wireform.sh  wireframe.py
src/ontobdc/context/: __init__.py
src/ontobdc/context/adapter/: loader.py  remote.py  resource.py  visitor.py
src/ontobdc/core/adapter/: entity.py  storage.py  util.py
src/ontobdc/dev/: __init__.py  branch.sh  commit.sh  dev.sh  help.sh  infobim.yaml  ontobdc.yaml  setup.sh
src/ontobdc/entity/: __init__.py  entity.sh  list.py
src/ontobdc/list/: list.py  list.sh
src/ontobdc/plan/: dag.py  plan.sh
src/ontobdc/plan/adapter/: ontology.py
src/ontobdc/plugin/template/: card.py
src/ontobdc/prompt/: commit.md
src/ontobdc/prompt/whatsapp/: analyze_chat.md
src/ontobdc/run/: capability_core.py  help.sh  install.sh  plan.py  plan.sh  run.py  run.sh  ui.py  util.py
src/ontobdc/run/adapter/: contex.py  evaluator.py  loader.py  machine.py  repository.py  selector.py  spacy.py
src/ontobdc/run/core/: action.py  capability.py  loader.py  selector.py
src/ontobdc/shared/adapter/: config.py  context.py  machine.py  ontology.py  plugin.py  util.py
src/ontobdc/storage/: __init__.py  list.py  local.py  refresh.py  remove.py  render_list.py  resource.py  storage.sh
src/ontobdc/storage/adapter/: container.py  crate.py  datapackage.py  dataset.py  icdd.py  repository.py  resource.py  spreadsheet.py  storage.py
(+168 files in other folders)
