[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ontobdc"
authors = [
    { name = "Elias Magalhães", email = "elias@brasidata.com" }
]
version = "0.6.0"
description = "OntoBDC (Ontology-Based Data Capabilities)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "PyYAML",
    "numpy",
    "datapackage",
    "rocrate",
]

[project.scripts]
ontobdc = "ontobdc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"ontobdc" = [
    "*.sh",
    "cli/*.sh",
    "dev/*.sh",
    "run/*.sh",
    "check/*.sh",
    "check/*.json",
    "check/infra/*/*.sh",
    "core/**",
    "module/**",
    "prompt/**",
    "plugin/**",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ontobdc*"]
